--- a/src/test/resources/config/test-api.yml
+++ b/src/test/resources/config/test-api.yml
@@ -77,6 +77,10 @@ rsDataSourceFactory:
       hibernate.default_schema: cwsrs1
       hibernate.connection.autocommit: false
 
+##==========================
+## XA DATA SOURCES:
+##==========================
+
 xaCmsDataSourceFactory:
   autoCommitByDefault: false
   driverClass: org.h2.Driver
@@ -94,18 +98,18 @@ xaCmsDataSourceFactory:
       hibernate.dialect: org.hibernate.dialect.H2Dialect
       hibernate.show_sql: ${FERB_HIBERNATE_SHOW_SQL:-false}
       hibernate.format_sql: ${FERB_HIBERNATE_FORMAT_SQL:-true}
-      hibernate.default_schema: ${DB_CMS_SCHEMA}
+      hibernate.default_schema: cwsint
       hibernate.connection.autocommit: false
       hibernate.current_session_context_class: jta
       hibernate.transaction.jta.platform: com.atomikos.icatch.jta.hibernate4.AtomikosPlatform
-      hibernate.transaction.factory_class: org.hibernate.resource.transaction.backend.jta.internal.JtaTransactionCoordinatorBuilderImpl
-      hibernate.connection.release_mode: on_close
-      connection.release_mode: on_close
-      hibernate.connection.isolation: 2
-      hibernate.cache.use_query_cache: false
-      # hibernate.connection.provider_disables_autocommit: true
+      hibernate.transaction.factory_class: gov.ca.cwds.data.persistence.xa.CaresJtaTransactionCoordinatorBuilderImpl
+      hibernate.connection.release_mode: after_transaction
+      connection.release_mode: after_transaction
+      hibernate.connection.isolation: 1
+      hibernate.cache.use_query_cache: true
       hibernate.cache.use_second_level_cache: false
-      # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
+      connection.timerLevelForQueryTimeOut: 2
+      connection.blockingReadConnectionTimeout: 120
   xaProperties:
       url: ${DB_CMS_JDBC_URL:-jdbc:h2:mem:cwsint;INIT=create schema if not exists cwsint\;set schema cwsint}
 
@@ -124,20 +128,22 @@ xaCmsRsDataSourceFactory:
   minIdleTime: 1 minute
   properties:
       hibernate.dialect: org.hibernate.dialect.H2Dialect
+      hibernate.id.new_generator_mappings: false
       hibernate.show_sql: ${FERB_HIBERNATE_SHOW_SQL:-false}
       hibernate.format_sql: ${FERB_HIBERNATE_FORMAT_SQL:-true}
-      hibernate.default_schema: ${DB_CWSRS_SCHEMA}
+      hibernate.default_schema: cwsrs1
       hibernate.connection.autocommit: false
       hibernate.current_session_context_class: jta
       hibernate.transaction.jta.platform: com.atomikos.icatch.jta.hibernate4.AtomikosPlatform
-      hibernate.transaction.factory_class: org.hibernate.resource.transaction.backend.jta.internal.JtaTransactionCoordinatorBuilderImpl
-      hibernate.connection.release_mode: on_close
-      connection.release_mode: on_close
+      hibernate.transaction.factory_class: gov.ca.cwds.data.persistence.xa.CaresJtaTransactionCoordinatorBuilderImpl
+      hibernate.connection.release_mode: after_transaction
+      connection.release_mode: after_transaction
       hibernate.connection.isolation: 2
-      # hibernate.connection.provider_disables_autocommit: true
-      hibernate.cache.use_query_cache: false
+      hibernate.temp.use_jdbc_metadata_defaults: true
+      hibernate.cache.use_query_cache: true
       hibernate.cache.use_second_level_cache: false
-      # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
+      connection.timerLevelForQueryTimeOut: 2
+      connection.blockingReadConnectionTimeout: 120
   xaProperties:
       url: ${DB_CMS_JDBC_URL:-jdbc:h2:mem:cwsrs1;INIT=create schema if not exists cwsrs1\;set schema cwsrs1}
 
@@ -158,19 +164,19 @@ xaNsDataSourceFactory:
       hibernate.id.new_generator_mappings: false
       hibernate.show_sql: ${FERB_HIBERNATE_SHOW_SQL:-false}
       hibernate.format_sql: ${FERB_HIBERNATE_FORMAT_SQL:-true}
-      hibernate.default_schema: ${DB_NS_SCHEMA:-intakens}
+      hibernate.default_schema: intakens
       hibernate.connection.autocommit: false
       hibernate.current_session_context_class: jta
       hibernate.transaction.jta.platform: com.atomikos.icatch.jta.hibernate4.AtomikosPlatform
-      hibernate.transaction.factory_class: org.hibernate.resource.transaction.backend.jta.internal.JtaTransactionCoordinatorBuilderImpl
-      hibernate.connection.release_mode: on_close
-      connection.release_mode: on_close
+      hibernate.transaction.factory_class: gov.ca.cwds.data.persistence.xa.CaresJtaTransactionCoordinatorBuilderImpl
+      hibernate.connection.release_mode: after_transaction
+      connection.release_mode: after_transaction
       hibernate.connection.isolation: 2
       hibernate.temp.use_jdbc_metadata_defaults: true
-      # hibernate.connection.provider_disables_autocommit: true
-      hibernate.cache.use_query_cache: false
+      hibernate.cache.use_query_cache: true
       hibernate.cache.use_second_level_cache: false
-      # hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
+      connection.timerLevelForQueryTimeOut: 2
+      connection.blockingReadConnectionTimeout: 120
   xaProperties:
       url: ${DB_NS_JDBC_URL:-jdbc:h2:mem:intakens;INIT=create schema if not exists intakens\;set schema intakens}
 
