--- a/build.gradle
+++ b/build.gradle
@@ -433,9 +433,7 @@ task pushGitTag(type:Exec, dependsOn: createGitTag) {
     }
 }
 task publishDocker(dependsOn: [pushDockerVersionTagged, pushDockerLatest,
-                               pushIntegrationTestDockerVersionTagged, pushIntegrationTestDockerLatest,
-                               pushFunctionalTestDockerVersionTagged,
-                               pushSmokeTestVersionTagged] ) {
+                               pushIntegrationTestDockerVersionTagged, pushIntegrationTestDockerLatest] ) {
     doLast {
         println 'Published'
     }
