--- a/config/api.yml
+++ b/config/api.yml
@@ -247,6 +247,15 @@ webSecurity:
     # Prevent everything other than same origin
     Content-Security-Policy: default-src 'self' 'unsafe-inline';
 
+sundial:
+  thread-pool-size: 10
+  shutdown-on-unload: true
+  wait-on-shutdown: false
+  start-delay-seconds: 0
+  start-scheduler-on-load: true
+  global-lock-on-load: false
+  tasks: [startjob, stopjob, addcronjobtrigger]
+ 
 server:
   applicationConnectors:
   - type: http 
