--- a/docker/ferb-test/config/testConfig.yml
+++ b/docker/ferb-test/config/testConfig.yml
@@ -9,7 +9,7 @@ testUrl:
    validateUrl: ${VALIDATE_URL}
 defaultUsers:
     -  userType: socialWorkerOnly
-       username: '{ "user": "RACFID", "staffId": "0X5", "roles": [ "Supervisor" ], "county_code": "56", "county_cws_code": "1123", "county_name": "Ventura", "privileges": [ "CWS Case Management System", "Resource Management", "Resource Mgmt Placement Facility Maint", "Sealed", "Sensitive Persons" ] }'
+       username: '{ "user": "BRADYG", "staffId": "aaw", "roles": [ "SocialWorker" ], "county_code": "17", "county_cws_code": "1084", "county_name": "Lake", "privileges": [ "CWS Case Management System" ] }'
        password: ${PASSWORD:-}
     -  userType: countySensitivePrivilegeUser
        username: ${USERNAME:-}
