--- a/docker/docker-compose.functional-test-env.yml
+++ b/docker/docker-compose.functional-test-env.yml
@@ -51,12 +51,13 @@ services:
       LOGIN_URL: http://perry:8083/perry/authn/login
       DB_CMS_USER: db2inst1
       DB_CMS_PASSWORD: db2inst1
-      DB_CMS_JDBC_URL: jdbc:db2://db2:50000/DB0TDEV:traceDirectory=/home/db2inst1/trace;traceFile=trace_cms.log;traceLevel=-1;
+      # DB_CMS_JDBC_URL: jdbc:db2://db2:50000/DB0TDEV:traceDirectory=/tmp;traceFile=trace_cms.log;traceLevel=-1;
+      DB_CMS_JDBC_URL: jdbc:db2://db2:50000/DB0TDEV
       DB_CMS_SCHEMA: CWSINT
       DB_CMS_HOST: db2
       DB_CMS_PORT: 50000
       DB_CMS_SERVICE: DB0TDEV
-      DB_CWSRS_JDBC_URL: jdbc:db2://db2:50000/DB0TDEV:traceDirectory=/home/db2inst1/trace;traceFile=trace_rs.log;traceLevel=-1;
+      DB_CWSRS_JDBC_URL: jdbc:db2://db2:50000/DB0TDEV
       DB_CWSRS_USER:  db2inst1
       DB_CWSRS_PASSWORD:  db2inst1
       DB_CWSRS_SCHEMA:  CWSRS1
