--- a/docker/DockerfileTests
+++ b/docker/DockerfileTests
@@ -1,13 +1,11 @@
-FROM gradle
+FROM gradle:4.9.0
 
 ENV DEBIAN_FRONTEND noninteractive
 ENV APP_PATH /ferb
-ENV GRADLE_CACHE ${APP_PATH}/build/gradle_cache
 
 USER root
 RUN mkdir $APP_PATH
 RUN mkdir ${APP_PATH}/build
-RUN mkdir ${GRADLE_CACHE}
 RUN mkdir ${APP_PATH}/lib
 
 WORKDIR $APP_PATH
@@ -21,9 +19,6 @@ COPY entrypoint.sh .
 COPY gradle.properties .
 COPY gradlew .
 COPY settings.gradle .
-COPY build/gradle_cache ${GRADLE_CACHE}
 COPY docker/ferb-test/config/testConfig.yml ${APP_PATH}/config/testConfig.yml
 
-RUN ./gradlew build -x test -x functionalQATest --gradle-user-home=${GRADLE_CACHE} --refresh-dependencies
-
-ENTRYPOINT ["./gradlew", "--gradle-user-home=${GRADLE_CACHE}", "--info", "--rerun-tasks", "functionalQATest"]
+ENTRYPOINT ["./gradlew", "--info", "--rerun-tasks", "functionalQATest"]
