--- a/config/api.yml
+++ b/config/api.yml
@@ -40,6 +40,7 @@ nsDataSourceFactory:
       hibernate.default_schema: ${DB_NS_SCHEMA:-intakens}
       hibernate.connection.autocommit: false
       hibernate.temp.use_jdbc_metadata_defaults: false
+      hibernate.connection.isolation: 2
 
 cmsDataSourceFactory:
   autoCommitByDefault: false
@@ -61,7 +62,8 @@ cmsDataSourceFactory:
       hibernate.use_sql_comments: true
       hibernate.default_schema: ${DB_CMS_SCHEMA}
       hibernate.connection.autocommit: false
-      hibernate.connection.isolation: 1
+      hibernate.connection.isolation: 2
+      debugUnreturnedConnectionStackTraces: true
       # hibernate.connection.provider_disables_autocommit: true
       # hibernate.current_session_context_class: thread
 
@@ -85,7 +87,7 @@ rsDataSourceFactory:
       hibernate.use_sql_comments: true
       hibernate.default_schema: ${DB_CWSRS_SCHEMA}
       hibernate.connection.autocommit: false
-      hibernate.connection.isolation: 1
+      hibernate.connection.isolation: 2
 
 ##==========================
 ## XA DATA SOURCES:
@@ -115,7 +117,7 @@ xaCmsDataSourceFactory:
       hibernate.transaction.factory_class: gov.ca.cwds.data.persistence.xa.CaresJtaTransactionCoordinatorBuilderImpl
       hibernate.connection.release_mode: after_transaction
       connection.release_mode: after_transaction
-      hibernate.connection.isolation: 1
+      hibernate.connection.isolation: 2
       hibernate.cache.use_query_cache: true
       hibernate.cache.use_second_level_cache: false
       connection.timerLevelForQueryTimeOut: 2
@@ -154,7 +156,7 @@ xaCmsRsDataSourceFactory:
       hibernate.transaction.factory_class: gov.ca.cwds.data.persistence.xa.CaresJtaTransactionCoordinatorBuilderImpl
       hibernate.connection.release_mode: after_transaction
       connection.release_mode: after_transaction
-      hibernate.connection.isolation: 1
+      hibernate.connection.isolation: 2
       hibernate.cache.use_query_cache: true
       hibernate.cache.use_second_level_cache: false
       connection.timerLevelForQueryTimeOut: 2
