--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenLocal()
         jcenter()
         maven {
-            url "http://pr.dev.cwds.io/artifactory/repo"
+            url "http://pr.dev.cwds.io/artifactory/repo"      
         }
         mavenCentral()
     }
@@ -15,21 +15,20 @@ buildscript {
 }
 
 plugins {
-    id "java"
+    id "java-library"
     id 'application'
     id "org.sonarqube" version "2.5"
     id 'net.ltgt.apt' version '0.15'
+
+    id 'com.github.jk1.dependency-license-report'
+    id 'maven-publish'
+    //id 'docker'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    id 'jacoco'
+    //apply from: "$rootDir/gradle/functionalTest.gradle"
+    id 'net.ltgt.apt-idea' version "0.21"
+    id 'net.ltgt.apt-eclipse' version "0.21"
 }
-
-apply plugin: 'com.github.jk1.dependency-license-report'
-apply plugin: 'maven-publish'
-apply plugin: 'docker'
-apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'jacoco'
-apply from: "$rootDir/gradle/functionalTest.gradle"
-apply plugin: 'net.ltgt.apt-idea'
-apply plugin: 'net.ltgt.apt-eclipse'
-
 
 sourceCompatibility = 1.8
 applicationDefaultJvmArgs = ["-Djava.library.path=.:./lib:/var/lib/jenkins/workspace/API/lib:/usr/local/lib"]
@@ -79,6 +78,10 @@ repositories {
    mavenLocal()
     maven {
         url "http://pr.dev.cwds.io/artifactory/repo"
+        metadataSources {
+          mavenPom()
+          artifact()
+        }       
     }
     mavenCentral()
 }
@@ -120,116 +123,127 @@ publishing {
 
 dependencies {
     // third party libs
-    compile group: "gov.ca.cwds.api.libs", name: "bcprov-jdk15on", version: "150"
-    compile group: "gov.ca.cwds.api.libs", name: "cryptojFIPS", version: "1"
-    compile group: "gov.ca.cwds.api.libs", name: "db2jcc", version: "4"
-    compile group: "gov.ca.cwds.api.libs", name: "db2jcc_license_cisuz", version: "1"
-    compile group: "gov.ca.cwds.api.libs", name: "libKeyJNI", version: "1", ext: "dylib"
-    compile group: "gov.ca.cwds.api.libs", name: "libKeyJNI", version: "1", ext: "so"
-    compile group: "gov.ca.cwds.api.libs", name: "libLZW", version: "1", ext: "dylib"
-    compile group: "gov.ca.cwds.api.libs", name: "libLZW", version: "1", ext: "so"
-    compile group: "gov.ca.cwds.api.libs", name: "libstdc", version: "6", ext: "so"
-    compile group: "gov.ca.cwds.api.libs", name: "lzw", version: "1", ext: "dll"
-    compile group: "gov.ca.cwds.api.libs", name: "lzw", version: "1", ext: "lib"
-    compile group: "gov.ca.cwds.api.libs", name: "msvcp", version: "140" ,ext: "dll"
-    compile group: "gov.ca.cwds.api.libs", name: "securezip-toolkit", version: "1"
-    compile group: "gov.ca.cwds.api.libs", name: "vcruntime", version: "140" ,ext: "dll"
+    implementation group: "gov.ca.cwds.api.libs", name: "bcprov-jdk15on", version: "150"
+    implementation group: "gov.ca.cwds.api.libs", name: "cryptojFIPS", version: "1"
+    implementation group: "gov.ca.cwds.api.libs", name: "db2jcc", version: "4"
+    implementation group: "gov.ca.cwds.api.libs", name: "db2jcc_license_cisuz", version: "1"
+    implementation group: "gov.ca.cwds.api.libs", name: "libKeyJNI", version: "1", ext: "dylib"
+    implementation group: "gov.ca.cwds.api.libs", name: "libKeyJNI", version: "1", ext: "so"
+    implementation group: "gov.ca.cwds.api.libs", name: "libLZW", version: "1", ext: "dylib"
+    implementation group: "gov.ca.cwds.api.libs", name: "libLZW", version: "1", ext: "so"
+    implementation group: "gov.ca.cwds.api.libs", name: "libstdc", version: "6", ext: "so"
+    implementation group: "gov.ca.cwds.api.libs", name: "lzw", version: "1", ext: "dll"
+    implementation group: "gov.ca.cwds.api.libs", name: "lzw", version: "1", ext: "lib"
+    implementation group: "gov.ca.cwds.api.libs", name: "msvcp", version: "140" ,ext: "dll"
+    implementation group: "gov.ca.cwds.api.libs", name: "securezip-toolkit", version: "1"
+    implementation group: "gov.ca.cwds.api.libs", name: "vcruntime", version: "140" ,ext: "dll"
     // end thirdparty libs
 
-    compile group: "io.dropwizard", name: "dropwizard-client", version: dropwizardVersion
-	compile group: "io.dropwizard", name: "dropwizard-hibernate", version: dropwizardVersion
-	compile group: "io.dropwizard", name: "dropwizard-views", version: dropwizardVersion
-	compile group: "io.dropwizard", name: "dropwizard-views-mustache", version: dropwizardVersion
-	compile group: 'io.dropwizard', name: 'dropwizard-assets', version: dropwizardVersion
-	compile group: "io.dropwizard", name: "dropwizard-testing", version: dropwizardVersion
-	compile group: "io.dropwizard.metrics", name: "metrics-core", version: metricsVersion
-    compile group: "io.dropwizard.modules", name: "dropwizard-flyway", version: dropwizardFlywayVersion
+    implementation group: "io.dropwizard", name: "dropwizard-client", version: dropwizardVersion
+    implementation group: "io.dropwizard", name: "dropwizard-hibernate", version: dropwizardVersion
+    implementation group: "io.dropwizard", name: "dropwizard-views", version: dropwizardVersion
+    implementation group: "io.dropwizard", name: "dropwizard-views-mustache", version: dropwizardVersion
+    implementation group: 'io.dropwizard', name: 'dropwizard-assets', version: dropwizardVersion
+    implementation group: "io.dropwizard", name: "dropwizard-testing", version: dropwizardVersion
+    implementation group: "io.dropwizard.metrics", name: "metrics-core", version: metricsVersion
+    implementation group: "io.dropwizard.modules", name: "dropwizard-flyway", version: dropwizardFlywayVersion
 
-    compile group: 'gov.ca.cwds', name: 'intake-ns-data-model', version: cwdsModelVersion
-    compile group: 'org.liquibase', name: 'liquibase-core', version: '3.5.3'
-    compile group: "org.glassfish.jersey.ext", name: "jersey-declarative-linking", version: "2.23.2"
-	compile group: "javax.el", name: "javax.el-api", version: "2.2.4"
-	compile group: "org.glassfish.web", name: "javax.el", version: "2.2.4"
-	compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.8.3'
+    implementation group: 'gov.ca.cwds', name: 'intake-ns-data-model', version: cwdsModelVersion
+    implementation group: 'org.liquibase', name: 'liquibase-core', version: '3.5.3'
+    implementation group: "org.glassfish.jersey.ext", name: "jersey-declarative-linking", version: "2.23.2"
+    implementation group: "javax.el", name: "javax.el-api", version: "2.2.4"
+    implementation group: "org.glassfish.web", name: "javax.el", version: "2.2.4"
+    implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.8.3'
 
-	compile group: 'org.apache.poi', name: 'poi', version: '3.17'
-	compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
-	compile group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.17'
+    implementation group: 'org.apache.poi', name: 'poi', version: '3.17'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
+    implementation group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.17'
 
-    compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: mapstructVersion
+    implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: mapstructVersion
 
     // ES 5.x:
-    compile group: 'org.elasticsearch', name: 'elasticsearch', version: elasticsearchVersion
-    compile group: 'org.elasticsearch.client', name: 'transport', version: elasticsearchVersion
-    compile ("org.elasticsearch.client:x-pack-transport:" + elasticsearchVersion)
+    implementation group: 'org.elasticsearch', name: 'elasticsearch', version: elasticsearchVersion
+    implementation group: 'org.elasticsearch.client', name: 'transport', version: elasticsearchVersion
+    implementation ("org.elasticsearch.client:x-pack-transport:" + elasticsearchVersion)
 
-	// Dropwizard-guice 1.0.0.2 conflicts with jersey-client 2.25.
-	// Exclude transitive dependencies.
-    compile (group: 'gov.ca.cwds.api', name: 'api-core', version: coreApiVersion) {
+    // Dropwizard-guice 1.0.0.2 conflicts with jersey-client 2.25.
+    // Exclude transitive dependencies.
+    implementation (group: 'gov.ca.cwds.api', name: 'api-core', version: coreApiVersion) {
 	    exclude group: 'org.glassfish.jersey.core'
 	    exclude group: 'org.apache.poi'
 	    exclude group: 'org.hibernate'
-	}
-	compile group: 'gov.ca.cwds.api', name: 'drools-engine', version: coreApiVersion
-    compile group: 'gov.ca.cwds.api', name: 'legacy-data-access', version: coreApiVersion
-    compile group: 'gov.ca.cwds.api', name: 'legacy-data-access-services', version: coreApiVersion
+	  }
+  	implementation group: 'gov.ca.cwds.api', name: 'drools-engine', version: coreApiVersion
+    implementation group: 'gov.ca.cwds.api', name: 'legacy-data-access', version: coreApiVersion
+    implementation group: 'gov.ca.cwds.api', name: 'legacy-data-access-services', version: coreApiVersion
 
-	// LOGGING:
-	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4jVersion
-  	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4jVersion
-	compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4jVersion
-	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
-	compile group: 'org.slf4j', name: 'slf4j-ext', version: '1.7.25'
-	compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+    // LOGGING:
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4jVersion
+  	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4jVersion
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4jVersion
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
+    implementation group: 'org.slf4j', name: 'slf4j-ext', version: '1.7.25'
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
-	compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.25.1'
-	compile group: 'com.hubspot.dropwizard', name: 'dropwizard-guice', version: '1.0.6.0'
+    implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.25.1'
+    implementation group: 'com.hubspot.dropwizard', name: 'dropwizard-guice', version: '1.0.6.0'
 
-	compile group: 'org.secnod.dropwizard', name: 'dropwizard-shiro', version: '0.2.0'
+    implementation group: 'org.secnod.dropwizard', name: 'dropwizard-shiro', version: '0.2.0'
 
-    compile fileTree(dir: 'lib', include: ['*.jar'])
-
-	compile group: 'io.swagger', name: 'swagger-jersey2-jaxrs', version: '1.5.9'
-	compile group: 'io.swagger', name: 'swagger-annotations', version: '1.5.9'
-    compile group: "org.postgresql", name: "postgresql", version: "9.4.1208.jre7"
-    compile group: 'org.json', name: 'json', version: '20090211'
+    implementation fileTree(dir: 'lib', include: ['*.jar'])
+    implementation group: 'io.swagger', name: 'swagger-jersey2-jaxrs', version: '1.5.9'
+    implementation group: 'io.swagger', name: 'swagger-annotations', version: '1.5.9'
+    implementation group: "org.postgresql", name: "postgresql", version: "9.4.1208.jre7"
+    implementation group: 'org.json', name: 'json', version: '20090211'
 
     // Distributed XA transactions:
-    compile group: 'com.atomikos', name: 'atomikos-util', version: '4.0.6'
-    compile group: 'com.atomikos', name: 'transactions-jta', version: '4.0.6'
-    compile group: 'com.atomikos', name: 'transactions-hibernate4', version: '4.0.6'
+    implementation group: 'com.atomikos', name: 'atomikos-util', version: '4.0.6'
+    implementation group: 'com.atomikos', name: 'transactions-jta', version: '4.0.6'
+    implementation group: 'com.atomikos', name: 'transactions-hibernate4', version: '4.0.6'
 
-	compile group: 'org.hibernate', name: 'hibernate-core',    version: '5.2.17.Final'
-    compile group: 'org.hibernate', name: 'hibernate-ehcache', version: '5.2.17.Final'
+  	implementation group: 'org.hibernate', name: 'hibernate-core',    version: '5.2.17.Final'
+    implementation group: 'org.hibernate', name: 'hibernate-ehcache', version: '5.2.17.Final'
 
-	// testCompile 'org.glassfish.jersey.core:jersey-client:2.26-b01'
-    testCompile group: 'gov.ca.cwds.api', name: 'api-core-test-support', version: coreApiVersion
-    testCompile group: 'gov.ca.cwds', name: 'cws-cms-data-model', version: cwdsModelVersion
+    implementation (group: 'gov.ca.cwds.api', name: 'api-core-common', version: coreApiVersion)
+    implementation (group: 'gov.ca.cwds.api', name: 'api-core-cms', version: coreApiVersion)
+    implementation (group: 'gov.ca.cwds.api', name: 'api-core-cms-interfaces', version: coreApiVersion)
+    implementation (group: 'gov.ca.cwds.api', name: 'api-core-es-interfaces', version: coreApiVersion)
+    implementation (group: 'gov.ca.cwds.api', name: 'api-core-rest', version: coreApiVersion)
+    implementation (group: 'gov.ca.cwds.api', name: 'api-core-abac', version: coreApiVersion)
+    implementation (group: 'gov.ca.cwds.api', name: 'api-security', version: '4.0.0_1010-RC')
+    implementation (group: 'org.knowm', name: 'dropwizard-sundial', version: '1.3.1')
 
-    testCompile group: 'junit', name: 'junit', version: junitVersion
-    testCompile group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
-    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: powerMockVersion
-    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: powerMockVersion
-    testCompile group: 'org.hamcrest', name: 'hamcrest-junit', version: hamcrestVersion
-    testCompile group: 'org.skyscreamer', name: 'jsonassert', version: jsonassertVersion
-	testCompile('org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.23.2') {
-		exclude group: 'javax.servlet', module: 'javax.servlet-api'
-		exclude group: 'junit', module: 'junit'
+	  implementation (group: 'io.swagger', name: 'swagger-core', version: '1.5.9')
+    implementation (group: 'commons-io', name: 'commons-io', version: '2.6')
+    implementation (group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.0')
 
-	// functional testing
-    	compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
-	}
-    testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.7'
-    testCompile group: 'io.rest-assured', name: 'json-schema-validator', version: '3.0.7'
+    // testImplementation 'org.glassfish.jersey.core:jersey-client:2.26-b01'
+    testImplementation group: 'gov.ca.cwds.api', name: 'api-core-test-support', version: coreApiVersion
+    testImplementation group: 'gov.ca.cwds', name: 'cws-cms-data-model', version: cwdsModelVersion
 
-	// https://mvnrepository.com/artifact/nl.jqno.equalsverifier/equalsverifier
-	testCompile group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '2.1.6'
-	testCompile group: "com.github.fge", name: "json-schema-validator", version: "2.2.6"
+    testImplementation group: 'junit', name: 'junit', version: junitVersion
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
+    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: powerMockVersion
+    testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: powerMockVersion
+    testImplementation group: 'org.hamcrest', name: 'hamcrest-junit', version: hamcrestVersion
+    testImplementation group: 'org.skyscreamer', name: 'jsonassert', version: jsonassertVersion
+  	testImplementation('org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.23.2') {
+        exclude group: 'javax.servlet', module: 'javax.servlet-api'
+        exclude group: 'junit', module: 'junit'
+        // functional testing
+        implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
+    }
+    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '3.0.7'
+    testImplementation group: 'io.rest-assured', name: 'json-schema-validator', version: '3.0.7'
 
-	// https://mvnrepository.com/artifact/com.google.errorprone/error_prone_annotations
-	testCompile group: 'com.google.errorprone', name: 'error_prone_annotations', version: '2.0.19'
+    // https://mvnrepository.com/artifact/nl.jqno.equalsverifier/equalsverifier
+    testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '2.1.6'
+    testImplementation group: "com.github.fge", name: "json-schema-validator", version: "2.2.6"
 
-    compileOnly "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+    // https://mvnrepository.com/artifact/com.google.errorprone/error_prone_annotations
+    testImplementation group: 'com.google.errorprone', name: 'error_prone_annotations', version: '2.0.19'
+
+    implementation "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 }
@@ -294,16 +308,17 @@ jacocoTestReport {
   reports {
     xml.enabled false
     csv.enabled false
-    html.destination "${buildDir}/jacocoHtml"
-    afterEvaluate {
-      classDirectories = files(classDirectories.files.collect {
-        fileTree(dir: it,
-          exclude: [
-            'gov/ca/cwds/rest/services/mapper/**'
-          ]
-        )
-      })
-    }
+    html.destination file("${buildDir}/jacocoHtml")
+    // RDB add back in
+    // afterEvaluate {
+    //   classDirectories = files(classDirectories.files.collect {
+    //     fileTree(dir: it,
+    //       exclude: [
+    //         'gov/ca/cwds/rest/services/mapper/**'
+    //       ]
+    //     )
+    //   })
+    // }
   }
 }
 
@@ -353,12 +368,13 @@ task copyDist(type: Copy, dependsOn: shadowJar) {
     into 'build/docker/libs'
 }
 
-task apidocker(type: Docker,  dependsOn: [copyConfig, copyDist] ) {
-    dockerfile = "Dockerfile"
-    project.group = "cwds"
-    applicationName = "api"
-    tagVersion = version + ((System.properties.getProperty('build') != null ) ? '.' + System.properties.getProperty('build') : '')
-}
+// RDB add back
+// task apidocker(type: Docker,  dependsOn: [copyConfig, copyDist] ) {
+//     dockerfile = "Dockerfile"
+//     project.group = "cwds"
+//     applicationName = "api"
+//     tagVersion = version + ((System.properties.getProperty('build') != null ) ? '.' + System.properties.getProperty('build') : '')
+// }
 
 task createSmokeTestDockerImage (type:Exec, dependsOn: shadowJar) {
     commandLine 'docker',  'build',  '-t',  'cwds/intake-api-smoketest', '-f', 'docker/DockerfileSmokeTests', '.'
